--- a/Proiect IDP/.classpath
+++ b/Proiect IDP/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/home/elf/GitHub/EclipseGit/idp/Proiect IDP/miglayout15-swing.jar"/>
+	<classpathentry kind="lib" path="log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
