--- a/Proiect IDP/build.xml
+++ b/Proiect IDP/build.xml
@@ -1,19 +1,23 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="run" name="Proiect IDP">
+<project basedir="." default="build" name="Proiect IDP">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../../../../../opt/eclipse"/>
+    <property name="ECLIPSE_HOME" value="D:/eclipse"/>
+    <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.7"/>
     <property name="source" value="1.7"/>
     <path id="Proiect IDP.classpath">
         <pathelement location="bin"/>
-        <pathelement location="miglayout15-swing.jar"/>
+        <pathelement location="lib/commons-io-2.4.jar"/>
+        <pathelement location="lib/hamcrest-all-1.3.jar"/>
+        <pathelement location="lib/junit-4.11.jar"/>
+        <pathelement location="lib/log4j-1.2.17.jar"/>
+        <pathelement location="lib/miglayout15-swing.jar"/>
+        <pathelement location="lib/mockito-all-1.9.5.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
-                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -45,15 +49,41 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-    <target name="run">
-        <java classname="mediator.Mediator" failonerror="true" fork="yes">
-            <arg line="oana"/>
+    <target name="GUI">
+        <java classname="gui.GUI" failonerror="true" fork="yes">
             <classpath refid="Proiect IDP.classpath"/>
         </java>
     </target>
-    <target name="Main (17)">
+    <target name="Main (1)">
         <java classname="mediator.Main" failonerror="true" fork="yes">
             <classpath refid="Proiect IDP.classpath"/>
         </java>
+    </target>
+    <target name="Main (2)">
+        <java classname="org.apache.log4j.chainsaw.Main" failonerror="true" fork="yes">
+            <classpath refid="Proiect IDP.classpath"/>
+        </java>
+    </target>
+    <target name="Mediator">
+        <java classname="mediator.Mediator" failonerror="true" fork="yes">
+            <arg line="andrei"/>
+            <classpath refid="Proiect IDP.classpath"/>
+        </java>
+    </target>
+    <target name="NetworkComponentTest">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="junitTests.NetworkComponentTest" todir="${junit.output.dir}"/>
+            <classpath refid="Proiect IDP.classpath"/>
+        </junit>
+    </target>
+    <target name="junitreport">
+        <junitreport todir="${junit.output.dir}">
+            <fileset dir="${junit.output.dir}">
+                <include name="TEST-*.xml"/>
+            </fileset>
+            <report format="frames" todir="${junit.output.dir}"/>
+        </junitreport>
     </target>
 </project>
