--- a/Proiect IDP/build.xml
+++ b/Proiect IDP/build.xml
@@ -1,109 +1,128 @@
-<?xml version="1.0" encoding="UTF-8"?><project basedir="." default="jar.client">
-    <!--Auto generated ant build file-->
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project basedir="." default="run" name="Proiect IDP">
     <property environment="env"/>
-    <property name="axis2.home" value="${env.AXIS2_HOME}"/>
-    <property name="project.base.dir" value="."/>
-    <property name="maven.class.path" value=""/>
-    <property name="name" value="ClientRegistry"/>
-    <property name="src" value="${project.base.dir}/src"/>
-    <property name="test" value="${project.base.dir}/test"/>
-    <property name="build" value="${project.base.dir}/build"/>
-    <property name="classes" value="${build}/classes"/>
-    <property name="lib" value="${build}/lib"/>
-    <property name="resources" value="${project.base.dir}/resources"/>
-    <property name="jars.ok" value=""/>
-    <path id="axis2.class.path">
-        <pathelement path="${java.class.path}"/>
-        <pathelement path="${maven.class.path}"/>
-        <fileset dir="${axis2.home}">
-            <include name="lib/*.jar"/>
-        </fileset>
+    <property name="ECLIPSE_HOME" value="../../../Downloads/eclipse-standard-kepler-SR2-win32/eclipse"/>
+    <property name="debuglevel" value="source,lines,vars"/>
+    <property name="target" value="1.7"/>
+    <property name="source" value="1.7"/>
+    <path id="JUnit 4.libraryclasspath">
+        <pathelement location="${ECLIPSE_HOME}/plugins/org.junit_4.11.0.v201303080030/junit.jar"/>
+        <pathelement location="${ECLIPSE_HOME}/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
+    </path>
+    <path id="Web App Libraries.libraryclasspath">
+        <pathelement location="WebContent/WEB-INF/lib/XmlSchema-1.4.7.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/activation-1.1.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axiom-api-1.2.13.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axiom-dom-1.2.13.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axiom-impl-1.2.13.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-adb-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-adb-codegen-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-ant-plugin-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-clustering-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-codegen-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-corba-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-fastinfoset-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-java2wsdl-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-jaxbri-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-jaxws-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-jibx-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-json-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-kernel-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-metadata-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-mtompolicy-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-saaj-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-soapmonitor-servlet-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-spring-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-transport-http-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-transport-local-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/axis2-xmlbeans-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-cli-1.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-codec-1.3.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-fileupload-1.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-httpclient-3.1.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-io-1.4.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-logging-1.1.1.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/log4j-1.2.15.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/mail-1.4.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/neethi-3.0.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/woden-api-1.0M9.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/woden-impl-commons-1.0M9.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/woden-impl-dom-1.0M9.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/wsdl4j-1.6.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/wstx-asl-3.2.9.jar"/>
+        <pathelement location="WebContent/WEB-INF/classes"/>
+    </path>
+    <path id="EAR Libraries.libraryclasspath"/>
+    <path id="Proiect IDP.classpath">
+        <pathelement location="bin"/>
+        <path refid="JUnit 4.libraryclasspath"/>
+        <pathelement location="lib/commons-io-2.4.jar"/>
+        <pathelement location="lib/hamcrest-all-1.3.jar"/>
+        <pathelement location="lib/junit-4.11.jar"/>
+        <pathelement location="lib/log4j-1.2.17.jar"/>
+        <pathelement location="lib/miglayout15-swing.jar"/>
+        <pathelement location="lib/mockito-all-1.9.5.jar"/>
+        <path refid="Web App Libraries.libraryclasspath"/>
+        <path refid="EAR Libraries.libraryclasspath"/>
+        <pathelement location="lib/httpcore-4.0.jar"/>
     </path>
     <target name="init">
-        <mkdir dir="${build}"/>
-        <mkdir dir="${classes}"/>
-        <mkdir dir="${lib}"/>
-    </target>
-    <target name="pre.compile.test" depends="init">
-        <!--Test the classpath for the availability of necesary classes-->
-        <available classname="javax.xml.stream.XMLStreamReader" property="stax.available" classpathref="axis2.class.path"/>
-        <available classname="org.apache.axis2.engine.AxisEngine" property="axis2.available" classpathref="axis2.class.path"/>
-        <condition property="jars.ok">
-            <and>
-                <isset property="stax.available"/>
-                <isset property="axis2.available"/>
-            </and>
-        </condition>
-        <!--Print out the availabilities-->
-        <echo message="Stax Availability= ${stax.available}"/>
-        <echo message="Axis2 Availability= ${axis2.available}"/>
-    </target>
-    <target name="compile.src" depends="pre.compile.test" if="jars.ok">
-        <javac fork="true" memoryInitialSize="256m" memoryMaximumSize="256m" debug="on" destdir="${classes}" srcdir="${src}">
-            <classpath refid="axis2.class.path"/>
-        </javac>
-    </target>
-    <target name="compile.test" depends="compile.src" if="jars.ok">
-        <javac fork="true" memoryInitialSize="256m" memoryMaximumSize="256m" debug="on" destdir="${classes}">
-            <src path="${test}"/>
-            <classpath refid="axis2.class.path"/>
-        </javac>
-    </target>
-    <target name="echo.classpath.problem" depends="pre.compile.test" unless="jars.ok">
-        <echo message="The class path is not set right!                                Please make sure the following classes are in the classpath                                1. XmlBeans                                2. Stax                                3. Axis2                 "/>
-    </target>
-    <target name="jar.all" depends="jar.server, jar.client"/>
-    <target name="jar.server" depends="compile.src,echo.classpath.problem" if="jars.ok">
-        <copy toDir="${classes}/META-INF" failonerror="false">
-            <fileset dir="${resources}">
-                <include name="*.xml"/>
-                <include name="*.wsdl"/>
-                <include name="*.xsd"/>
+        <mkdir dir="bin"/>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src">
+                <exclude name="**/*.launch"/>
+                <exclude name="**/*.java"/>
             </fileset>
         </copy>
-        <jar destfile="${lib}/${name}.aar">
-            <fileset excludes="**/Test.class" dir="${classes}"/>
-        </jar>
-    </target>
-    <target name="jar.client" if="jars.ok" depends="compile.src">
-        <jar destfile="${lib}/${name}-test-client.jar">
-            <fileset dir="${classes}">
-                <exclude name="**/META-INF/*.*"/>
-                <exclude name="**/lib/*.*"/>
-                <exclude name="**/*MessageReceiver.class"/>
-                <exclude name="**/*Skeleton.class"/>
-            </fileset>
-        </jar>
-    </target>
-    <target name="make.repo" depends="jar.server" if="jars.ok">
-        <mkdir dir="${build}/repo/"/>
-        <mkdir dir="${build}/repo/services"/>
-        <copy file="${build}/lib/${name}.aar" toDir="${build}/repo/services/"/>
-    </target>
-    <target name="start.server" depends="make.repo" if="jars.ok">
-        <java classname="org.apache.axis2.transport.http.SimpleHTTPServer" fork="true">
-            <arg value="${build}/repo"/>
-            <classpath refid="axis2.class.path"/>
-        </java>
-    </target>
-    <target name="run.test" depends="compile.test" if="jars.ok">
-        <path id="test.class.path">
-            <pathelement location="${lib}/${name}-test-client.jar"/>
-            <path refid="axis2.class.path"/>
-            <pathelement location="${classes}"/>
-        </path>
-        <mkdir dir="${build}/test-reports/"/>
-        <junit printsummary="yes" haltonfailure="yes">
-            <classpath refid="test.class.path"/>
-            <formatter type="plain"/>
-            <batchtest fork="yes" toDir="${build}/test-reports/">
-                <fileset dir="${test}">
-                    <include name="**/*Test*.java"/>
-                </fileset>
-            </batchtest>
-        </junit>
     </target>
     <target name="clean">
-        <delete dir="${build}"/>
+        <delete dir="bin"/>
+    </target>
+    <target depends="clean" name="cleanall"/>
+    <target depends="build-subprojects,build-project" name="build"/>
+    <target name="build-subprojects"/>
+    <target depends="init" name="build-project">
+        <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="src"/>
+            <classpath refid="Proiect IDP.classpath"/>
+        </javac>
+    </target>
+    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
+        <copy todir="${ant.library.dir}">
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </copy>
+        <unzip dest="${ant.library.dir}">
+            <patternset includes="jdtCompilerAdapter.jar"/>
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </unzip>
+    </target>
+    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
+        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
+        <antcall target="build"/>
+    </target>
+	<target name="run">
+		<parallel>
+		<java classname="main.NanoShare" failonerror="true" fork="yes">
+		<jvmarg line="-Dlog4j.configuration=file:log/andrei.properties"/>
+		<arg line="andrei"/>
+		<classpath refid="Proiect IDP.classpath"/>
+		</java>
+		
+		<java classname="main.NanoShare" failonerror="true" fork="yes">
+		<jvmarg line="-Dlog4j.configuration=file:log/oana.properties"/>
+		<arg line="oana"/>
+		<classpath refid="Proiect IDP.classpath"/>
+		</java>
+		
+		<java classname="main.NanoShare" failonerror="true" fork="yes">
+		<jvmarg line="-Dlog4j.configuration=file:log/roland.properties"/>
+		<arg line="roland"/>
+		<classpath refid="Proiect IDP.classpath"/>
+		</java>
+		</parallel>
     </target>
 </project>
